# ChangeLog for games-emulation/qmc2
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  12 May 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta2.ebuild:
  Bumped.

  28 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta1.ebuild:
  Readded keywords.

  28 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.1.ebuild,
  +qmc2-0.1-r1.ebuild, qmc2-0.2_beta1.ebuild:
  Gah, missed GAMES_DATADIR. Fixed. Also added a new ebuild for the old
  version. Purged the old one.

  28 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta1.ebuild:
  Bumped and cleaned the ebuild up a bit.

  24 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> qmc2-0.1.ebuild:
  Updated by previous author.

*qmc2-0.1 (19 Feb 2008)

  19 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> +qmc2-0.1.ebuild:
  Initial ebuild by Michał "mziab" Ziąbkowski.