@@ -1,8 +1,6 @@
 AUX qmc2-makefile.patch 1181 RMD160 2405f25eb5d91c1c2a57ce263b2b990714589a40 SHA1 d259b10dae1284c98d1f68b3f7ae72bfe42416a1 SHA256 994da7a400639e49ea602bd4b016f0cb8a0514d4b673eb6a8c6677b6c99e3765
-DIST qmc2-0.1.tar.bz2 978312 RMD160 3218083838cfb17ca45b416bd37b4d72d417ea87 SHA1 7c443efd31b7e84d454e03c6aed1fdb8163a55f1 SHA256 7bde7ce567d6da474fbb804c03c222d14bd42107396700f4a65fc4f13cedc44e
 DIST qmc2-0.2.b1.tar.bz2 1080601 RMD160 d284b0eff8a4d32367b328ae7d45b87ec0386572 SHA1 fb818c43ca7feb1c7bfe7214d822340a09e16631 SHA256 7b0ebc6c07c82ec71930f817605ad80efd3e5a360b7f2c9ec89b717a859dd169
 DIST qmc2-0.2.b2.tar.bz2 1166461 RMD160 55654f9eb289bc3191853da6d2d7c68a1e0f3d18 SHA1 031a11be4b6dae3b904bf1c28fec3cda6481a3d2 SHA256 a6039b5f2ba1c896a6028a22bcd7b4df67b8ea52c6b65dc1bb56d2c65042fdd6
-EBUILD qmc2-0.1-r1.ebuild 1282 RMD160 d18c4fab58243bacf498c36d8e1316a1df482211 SHA1 0060a839a09ce63ce8b0e739048112bf268fa29c SHA256 843f331ca03406a9d33d1a77989b3607be3525024421716133b5ba48390fff87
 EBUILD qmc2-0.2_beta1.ebuild 1314 RMD160 baff0ad733103765a85a1639cf4a5c6ed6f7d7f8 SHA1 67aaf33d7fb5fc52927cb32cc66c181c9b81f506 SHA256 5a9819b28829687913fda0635fbfe63c93a0f454262c8ffd710c7b486a906429
 EBUILD qmc2-0.2_beta2.ebuild 1368 RMD160 c306d9b9d92de7a88d287088f225088d2ec690b0 SHA1 7efc0ab76c20ae67c9db5b7461c927d74d2b29f0 SHA256 6fc5d6546bfb929abd0af138bedffc286ae3de0ec4ad899123f60ea43eafd5d3
-MISC ChangeLog 854 RMD160 4f77f4f2cbd37af798c6aedb13e75d35d4c7264e SHA1 3fb7f04e3867b4bfbfa560eed1061ec676233540 SHA256 17f7de40c4e31bd19383d90a625829d33e8303de7c1773dbb63cb7efdc5dc291
+MISC ChangeLog 950 RMD160 70ee7d2442e8ef4bb676ed01d9186b1a89869d9b SHA1 59688ba1839bad6cf879511c6265baf4585c9b16 SHA256 9758624a3878920798d327309a38e07cc9a2ede97d4d6c5d4da5800362df0edc
