@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/qmc2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.1-r1.ebuild:
+  Removed oldest ebuild.
+
   12 May 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta2.ebuild:
   Bumped.
 
